--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "watchify js/components/board.js -o lib/components/board.js -t [ babelify --presets [es2015 react] ] -v"
+    "build": "watchify js/components/board.js -o lib/components/board.js -t [ babelify --presets [es2015 react] ] -v",
+    "start": "node js/server/app.js"
   },
   "keywords": [
     "currency",
