--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "currency_rate",
-  "version": "1.0.0",
+  "name": "currency_exchange_board",
+  "version": "1.0.4",
   "description": "service tracking currency changes",
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "watchify js/exchange.js -o lib/components/board.js -t [ babelify --presets [es2015 react] ] -v"
+    "build": "watchify index.js -o lib/components/board.js -t [ babelify --presets [es2015 react] ] -v"
   },
   "keywords": [
     "currency",
