--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "watchify index.js -o lib/components/board.js -t [ babelify --presets [es2015 react] ] -v"
+    "build": "watchify demo.js -o lib/components/board.js -t [ babelify --presets [es2015 react] ] -v"
   },
   "keywords": [
     "currency",
@@ -14,6 +14,10 @@
   ],
   "author": "Stefan Slaveykov",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wizardone/currency-exchange.git"
+  },
   "devDependencies": {
     "babel-cli": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
