--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "service tracking currency changes",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "mocha --compilers js:babel-register",
     "build_demo": "watchify demo.js -o lib/components/demo.js -t [ babelify --presets [es2015 react] ] -v"
   },
   "keywords": [
@@ -22,8 +22,12 @@
     "babel-cli": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.14.0",
     "babelify": "^7.3.0",
-    "react": "^15.0.2",
+    "expect.js": "^0.3.1",
+    "mocha": "^3.0.2",
+    "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.0.2"
   },
   "browserify": {
