--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-register": "^6.14.0",
     "babelify": "^7.3.0",
     "expect.js": "^0.3.1",
+    "file-loader": "^0.11.1",
     "mocha": "^3.0.2",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
