--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.14.0",
     "babelify": "^7.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "enzyme": "^2.8.2",
     "expect.js": "^0.3.1",
     "file-loader": "^0.11.1",
     "mocha": "^3.0.2",
