--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "service tracking currency changes",
   "main": "lib/bundle.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
+    "test": "mocha-webpack --webpack-config webpack.config.js \"test/**/*.js\"",
     "build": "webpack",
     "start_dev": "webpack-dev-server --config sample.webpack.config.js",
     "build_dev": "webpack --config sample.webpack.config.js"
@@ -22,21 +22,26 @@
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.14.0",
     "babelify": "^7.3.0",
-    "copy-webpack-plugin": "^4.0.1",
     "enzyme": "^2.8.2",
     "expect.js": "^0.3.1",
     "file-loader": "^0.11.1",
     "mocha": "^3.0.2",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.0.2",
+    "mocha-webpack": "^0.7.0",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
